dogs display on page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,8 @@
-$blue: blue;
+$blue: royalblue;
+$brown: rosybrown;
+$purple: darkorchid;
+$yellow: yellow;
+$green: limegreen;
+$red: palevioletred;
+$white: honeydew;
+$black: dimgray;
